--- a/.github/workflows/pipeline-LBN.yml
+++ b/.github/workflows/pipeline-LBN.yml
@@ -68,19 +68,19 @@ jobs:
 
       # Backend Deploy to EC2 (solo como ejemplo, normalmente no querríamos desplegar en cada PR)
       - name: Configure SSH
-        if: steps.check_pr.outputs.result == 'true' && success()
+        if: steps.check_pr.outputs.result == 'false' && success()
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
       - name: Setup known hosts
-        if: steps.check_pr.outputs.result == 'true' && success()
+        if: steps.check_pr.outputs.result == 'false' && success()
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2
-        if: steps.check_pr.outputs.result == 'true' && success()
+        if: steps.check_pr.outputs.result == 'false' && success()
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
