Modificar el pipeline de GitHub Actions para reemplazar 'npm ci' por 'npm install' en las etapas de instalación de dependencias, tanto en el entorno de desarrollo como en producción.

--- a/.github/workflows/pipeline-LBN.yml
+++ b/.github/workflows/pipeline-LBN.yml
@@ -51,7 +51,7 @@ jobs:
         if: steps.check_pr.outputs.result == 'false'
         run: |
           cd backend
-          npm ci
+          npm install
 
       - name: Run backend tests
         if: steps.check_pr.outputs.result == 'false'
@@ -103,7 +103,7 @@ jobs:
 
             # Instalar dependencias de producción si es necesario
             cd ~/app/backend
-            npm ci --only=production
+            npm install --only=production
 
             # Reiniciar el servicio (asumiendo que usamos PM2)
             if pm2 list | grep -q backend; then
