Actualizar condiciones en el pipeline de GitHub Actions para que las tareas de instalación de Node.js, instalación de dependencias, ejecución de pruebas, construcción y despliegue en EC2 se realicen solo si el resultado de la verificación de PR es 'true'.

--- a/.github/workflows/pipeline-LBN.yml
+++ b/.github/workflows/pipeline-LBN.yml
@@ -39,7 +39,7 @@ jobs:
           result-encoding: string
 
       - name: Install Node.js
-        if: steps.check_pr.outputs.result == 'false'
+        if: steps.check_pr.outputs.result == 'true'
         uses: actions/setup-node@v3
         with:
           node-version: 18
@@ -48,39 +48,39 @@ jobs:
 
       # Backend Tests
       - name: Install backend dependencies
-        if: steps.check_pr.outputs.result == 'false'
+        if: steps.check_pr.outputs.result == 'true'
         run: |
           cd backend
           npm install
 
       - name: Run backend tests
-        if: steps.check_pr.outputs.result == 'false'
+        if: steps.check_pr.outputs.result == 'true'
         run: |
           cd backend
           npm test
 
       # Backend Build
       - name: Build backend
-        if: steps.check_pr.outputs.result == 'false' && success()
+        if: steps.check_pr.outputs.result == 'true' && success()
         run: |
           cd backend
           npm run build
 
       # Backend Deploy to EC2 (solo como ejemplo, normalmente no querríamos desplegar en cada PR)
       - name: Configure SSH
-        if: steps.check_pr.outputs.result == 'false' && success()
+        if: steps.check_pr.outputs.result == 'true' && success()
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
       - name: Setup known hosts
-        if: steps.check_pr.outputs.result == 'false' && success()
+        if: steps.check_pr.outputs.result == 'true' && success()
         run: |
           mkdir -p ~/.ssh
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy to EC2
-        if: steps.check_pr.outputs.result == 'false' && success()
+        if: steps.check_pr.outputs.result == 'true' && success()
         env:
           EC2_HOST: ${{ secrets.EC2_HOST }}
           EC2_USER: ${{ secrets.EC2_USER }}
